--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,3 +9,5 @@
   <div id="app"></div>
 </body>
 </html>
+
+<script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
